--- a/api-deployment.yaml
+++ b/api-deployment.yaml
@@ -17,10 +17,14 @@ spec:
       containers:
         - name: synergychat-api
           image: bootdotdev/synergychat-api:latest
-          env:
-            - name: API_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: synergychat-api-configmap
-                  key: API_PORT
+          volumeMounts:
+            - name: synergychat-api-volume
+              mountPath: /persist
+          envFrom:
+            - configMapRef:
+                name: synergychat-api-configmap
+      volumes:
+        - name: synergychat-api-volume
+          persistentVolumeClaim:
+            claimName: synergychat-api-pvc
               
