--- a/crawler-deployment.yaml
+++ b/crawler-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: synergychat-crawler
+  namespace: crawler
   labels:
     app: synergychat-crawler
 spec:
@@ -15,9 +16,37 @@ spec:
         app: synergychat-crawler
     spec:
       containers:
-        - name: synergychat-crawler
+        - name: synergychat-crawler-1
           image: bootdotdev/synergychat-crawler:latest
+          volumeMounts:
+            - name: cache-volume
+              mountPath: /cache
           envFrom:
             - configMapRef:
                 name: synergychat-crawler-configmap
+        - name: synergychat-crawler-2
+          image: bootdotdev/synergychat-crawler:latest
+          volumeMounts:
+            - name: cache-volume
+              mountPath: /cache
+          envFrom:
+            - configMapRef:
+                name: synergychat-crawler-configmap
+          env:
+            - name: CRAWLER_PORT
+              value: $(CRAWLER_PORT_2)
+        - name: synergychat-crawler-3
+          image: bootdotdev/synergychat-crawler:latest
+          volumeMounts:
+            - name: cache-volume
+              mountPath: /cache
+          envFrom:
+            - configMapRef:
+                name: synergychat-crawler-configmap
+          env:
+            - name: CRAWLER_PORT
+              value: $(CRAWLER_PORT_3)
+      volumes:
+        - name: cache-volume
+          emptyDir: {}
               
